Fixed bug that caused tiles to form outside the board on mobile

--- a/src/components/css/PuzzleComponent.css
+++ b/src/components/css/PuzzleComponent.css
@@ -114,6 +114,6 @@
 
   .puzzlebox {
     border-radius: 0.5;
-    font-size: 13pt;
+    font-size: 11pt;
   }
 }
